--- a/spring-security-clef-core/build.gradle
+++ b/spring-security-clef-core/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-//    compile 'org.springframework:spring-web'
+    compile 'org.springframework:spring-webmvc'
     compile 'org.springframework.security:spring-security-web'
     compile 'org.springframework.security:spring-security-config'
     compile 'org.slf4j:slf4j-api'
