--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ plugins {
 
 allprojects {
     apply plugin: 'nebula.nebula-release'
+
+    ext {
+        bintrayUser = System.env['BINTRAY_USER']
+        bintrayKey = System.env['BINTRAY_KEY']
+    }
 }
 
 subprojects {
@@ -58,8 +63,6 @@ subprojects {
     }
 
     bintray {
-        user = System.env['BINTRAY_USER']
-        key = System.env['BINTRAY_KEY']
         publications = ['java']
 
         pkg {
