--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,15 @@ allprojects {
         bintrayUser = System.env['BINTRAY_USER']
         bintrayKey = System.env['BINTRAY_KEY']
     }
+
+    task validateEnv << {
+        ['BINTRAY_USER', 'BINTRAY_KEY', 'GPG_PASSPHRASE'].each { key ->
+            if (!System.getenv(key))
+            {
+                throw new GradleException("Environment variable $key must be set")
+            }
+        }
+    }
 }
 
 subprojects {
@@ -38,6 +47,8 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
 
     apply plugin: 'nebula.nebula-bintray'
+
+    tasks.release.dependsOn tasks.validateEnv
 
     repositories {
         jcenter()
@@ -77,6 +88,7 @@ subprojects {
             version {
                 gpg {
                     sign = true
+                    passphrase = System.env['GPG_PASSPHRASE']
                 }
             }
         }
